# hudson

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/basechat/: .env.example  .eslintrc.js  README.md  package.json  tailwind.config.ts
apps/basechat/app/: layout.tsx  navigation.tsx  page.tsx
apps/basechat/app/chat/: page.tsx
apps/basechat/app/completion/: page.tsx
apps/basechat/app/fal/: page.tsx
apps/basechat/app/image/: page.tsx
apps/chat-ai/: package.json
apps/cv/: index.html  package.json  tailwind.config.js
apps/cv-ai-chat/: README.md  next.config.js  package.json
apps/cv-ai-rag-uploader/: README.md  delete-pinecone.ts  delete-rag.ts  package.json  pinecone.ts
apps/cv-ai-rag-uploader/corpus/: CV.md  Eruptiv.md  Next.js Experience.md  React Architecture.md  User Manual of Me.md  What did you do at Peppy?.md
apps/cv-ai-rag-uploader/pinecone/: blog.ts  github.ts  markdown.ts
apps/cv-ai-rag-uploader/supabase/: github.ts  markdown.ts
apps/cv-langserve/: Dockerfile  Pinecone-Langchain.ipynb  README.md  pyproject.toml  requirements.txt  vercel.json
apps/cv-langserve/.ipynb_checkpoints/: Pinecone-Langchain-checkpoint.ipynb
apps/cv-langserve/app/: aicv.py  rolecover.py  rolematch.py  server.py
apps/cv/src/: App.tsx  Full-Stack-Engineer-Public-Sector.tsx  Full-Stack-Engineer-Startup.tsx  main.tsx
apps/ragup/: README.md  blog.ts  github.ts  index.ts  package.json  tsconfig.json
apps/ragup/corpus/: CV.md  React Patterns.md  User Manual of Me.md
apps/web/: tailwind.config.ts
(+86 files in other folders)
